lib/flux/apps/home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
